testsuite/tests/saks/should_fail/saks_fail019.stderr

saks_fail019.hs:9:1: error:
    • Couldn't match kind ‘a’ with ‘*’
      Expected: a -> *
        Actual: * -> *
    • In the data type declaration for ‘T’
